force-app/main/default/objects/nFORCE__Translation__c/fields/nFORCE__Language__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Language__c</fullName>
    <description>This required field references the language of the translated text.</description>
    <inlineHelpText>Set this to the language that the translated value is in. The format should be ISO 639-1 for the language followed by a dash followed by the ISO Alpha-2 country code. Example: (en-US).</inlineHelpText>
    <label>Language</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>